plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group = 'bitxon.dropwizard'
version = '1.0-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_20
mainClassName = 'bitxon.dropwizard.DropwizardApplication'


repositories {
    mavenCentral()
}

dependencies {
    implementation enforcedPlatform("io.dropwizard:dropwizard-bom:4.0.0")
    implementation 'io.dropwizard:dropwizard-core'

    testImplementation 'io.dropwizard:dropwizard-testing'
}

test {
    useJUnitPlatform()
    jvmArgs('--enable-preview')
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName
        attributes 'Build-Jdk-Spec': sourceCompatibility
        attributes 'Class-Path': sourceSets.main.runtimeClasspath.collect { it.name }.join(' ')
    }
}

shadowJar {
    mergeServiceFiles()
    exclude 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.SF'
}

run {
    args = ['server', 'config.yml']
    jvmArgs('--enable-preview')
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
    options.compilerArgs.add('-Xlint:preview')
}

